--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
     <div id="root">
-        <div class="container">
-            <div class="row">
+        <div class="container-fluid">
+            <div class="row justify-content-center align-items-center">
                 <div class="col-12">
-                    <div class="content text-center">
+                    <div class="content text-center d-flex-c align-items-center justify-content-center">
 
 
                         <!-- PRINT INFO PROM VUE -->
@@ -28,10 +28,9 @@
 
 
                         <!-- PRINT IMAGE FROM VUE DATA -->
-                        <img :src="image" alt="">
-
-
-
+                        <div class="yoda" :class="classColor">
+                            <img class="img-fluid w-50" :src="image" :alt="imageName">
+                        </div>
 
 
 
@@ -40,13 +39,16 @@
 
                         <!-- WITH FUNCTION FROM VUE -->
 
-                        <div>
-                            <button @click="greet">Cliccami</button>
+                        <div class="p-3">
+                            <button @click="colorToggle">Cliccami</button>
                         </div>
 
                         <!-- input from user -->
-                        <input type="text" v-model="fromUser">
-                        <p>What I'm writing here: {{fromUser}}</p>
+                        <div class="p-3">
+
+                            <input type="text" v-model="fromUser">
+                            <p>What I'm writing here: {{fromUser}}</p>
+                        </div>
 
                     </div>
                 </div>
