greet function button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
                         <!-- WITH FUNCTION FROM VUE -->
 
                         <div class="p-3">
-                            <button @click="colorToggle">Cliccami</button>
+                            <button @click="colorToggle">Surprise!</button>
+                        </div>
+
+                        <div class="p-3">
+                            <button @click="greet">Push me!</button>
                         </div>
 
                         <!-- input from user -->
