--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
                         <!-- extra -->
 
+                        <p>{{ fromUser}}</p>
+
                         <!-- WITH FUNCTION FROM VUE -->
 
                         <div class="p-3">
