--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 
 
                         <!-- PRINT IMAGE FROM VUE DATA -->
-                        <div class="yoda" :class="classColor">
-                            <img class="img-fluid w-50" :src="image" :alt="imageName">
+                        <div class="d-flex justify-content-center align-items-center">
+
+                            <div class="yoda" :class="classColor">
+                                <img class="img-fluid w-50" :src="image" :alt="imageName">
+                            </div>
                         </div>
 
 
